Fixed styling so scrolled items would disappear behind navbar

--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -2,7 +2,7 @@
 
 .contact-screen {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
