--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -4,10 +4,11 @@
     position: fixed;
     display: flex;
     width: 100%;
-    height: 80px;
+    height: 60px;
     justify-content: space-between;
     align-items: center;
     padding-right: 40px;
+    background-color: var(--bg-color);
 }
 
 .navbar-buttons {
@@ -18,6 +19,10 @@
 .navbar-item {
     padding-right: 18px;
     padding-left: 18px;
+}
+
+.logo {
+    width: 60px;
 }
 
 /* Hamburger and skinny screen menu, likely for mobile phones */
@@ -85,6 +90,12 @@
     }
     .hamburger {
         display: none;
+    }
+    .navbar {
+        height: 80px;
+    }
+    .logo {
+        width: 80px;
     }
 }
 
