--- a/src/style/Skills.css
+++ b/src/style/Skills.css
@@ -5,11 +5,12 @@
     margin-right: auto;
     max-width: 1000px;
     padding: 16px;
+    padding-top: 80px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .skills-titlebox {
@@ -35,10 +36,10 @@
     width: 100%;
     display: grid;
     gap: 16px;
-    text-align: center;
+    /* text-align: center;
     padding-top: 24px;
     padding-bottom: 24px;
-    justify-content: center;
+    justify-content: center; */
     grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
@@ -48,6 +49,16 @@
     background-color: var(--darker-color);
     box-shadow: var(--shadow-color);
     height: 124px;
+    width: 100%;
+    border-radius: 6px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 16px;
+    text-align: center;
+    grid-template-rows: 1fr 1fr
 }
 
 .skills-image {
@@ -68,5 +79,11 @@
     .skills-grid {
         grid-template-columns: repeat(2, minmax(0, 1fr));
         max-width: 640px;
+    }
+    .skills-grid-item {
+        height: 100px;
+    }
+    .skills-image-label {
+    display: none;
     }
 }
